--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "axios": "^1.5.1",
       "dotenv": "^16.3.1",
       "node-telegram-bot-api": "^0.63.0"
    }
