--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
    "dependencies": {
       "axios": "^1.5.1",
       "dotenv": "^16.3.1",
-      "node-telegram-bot-api": "^0.63.0"
+      "node-telegram-bot-api": "^0.63.0",
+      "sqlite3": "^5.1.6"
    }
 }
