--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
-      "axios": "^1.5.1",
       "dotenv": "^16.3.1",
       "node-telegram-bot-api": "^0.63.0",
+      "puppeteer": "^24.2.0",
       "sqlite3": "^5.1.6"
    }
 }
